@@ -177,7 +177,7 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
-© 2013-2015 Michal Josef Špaček
+© 2013-2023 Michal Josef Špaček
 
 BSD 2-Clause License
 
