@@ -82,7 +82,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2013-2015 Michal Josef Špaček
+    © 2013-2023 Michal Josef Špaček
 
     BSD 2-Clause License
 
