@@ -4,6 +4,7 @@
  - Update author github username.
  - Update author name.
  - Update Module::Install to 1.21 version.
+ - Update copyright years.
 
 0.03 2015-09-23T23:30:47+02:00
  - Add tests for Lego::Part class.
